# pylifemap

./: .editorconfig  .gitignore  .gitmodules  .nojekyll  .prettierrc.json  Dockerfile  NEWS.md  README.md  changelog.html  development.html  index.html  installation.html  justfile  large_datasets.html  listings.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  search.json  sitemap.xml
.github/workflows/: bundle.yml  dist.yml  docker.yml  publish.yml  tests.yml
data/: iucn.csv  iucn.parquet  iucn_subset.parquet
doc/: .gitignore  _quarto.yml  _quartodoc_sidebar.yml  _sidebar.yml  custom.scss  development.qmd  getting_started.qmd  index.qmd  installation.qmd  large_datasets.qmd  layer_points.qmd  objects.json  usage.qmd
doc/gallery/: gallery.qmd
doc/gallery/sources/: iucn.qmd  iucn2.qmd  phylopic.qmd  wuhan.qmd
doc/gallery/sources/data/: IUCN_with_taxid_SMALL.parquet  amniota_taxid_list.csv  wuhan_taxid_df.csv  wuhan_taxid_kraken2.parquet
doc/layers/: layer_arcs.qmd  layer_arcs_deck.qmd  layer_donuts.qmd  layer_heatmap.qmd  layer_heatmap_deck.qmd  layer_icons.qmd  layer_lines.qmd  layer_points.qmd  layer_screengrid.qmd  layer_text.qmd
doc/reference/: Lifemap.qmd  aggregate_cat.qmd  aggregate_count.qmd  aggregate_freq.qmd  aggregate_num.qmd  index.qmd
docker/: start.sh
gallery/: gallery.html
gallery/sources/: iucn.html  iucn2.html  phylopic.html  wuhan.html
layers/: layer_donuts.html  layer_heatmap.html  layer_heatmap_deck.html  layer_icons.html  layer_lines.html  layer_points.html  layer_screengrid.html  layer_text.html
notebooks/: introduction.ipynb
reference/: Lifemap.html  Lifemap.layer_donuts.html  Lifemap.layer_heatmap.html  Lifemap.layer_heatmap_deck.html  Lifemap.layer_icons.html  Lifemap.layer_lines.html  Lifemap.layer_points.html  Lifemap.layer_screengrid.html  Lifemap.layer_text.html  Lifemap.save.html  Lifemap.show.html  aggregate_count.html  aggregate_freq.html  aggregate_num.html  get_duplicated_taxids.html  get_unknown_taxids.html  index.html
sample_notebooks/: introduction.ipynb
scripts/: 01_get_lmdata.R  02_prepare_lmdata.py  prepare_lmdata.py
site_libs/bootstrap/: bootstrap-1a8c71a2bf026a4bd2b3c7764eb490a7.min.css  bootstrap-384ad48c663d8fbc494a9d6f0a4d77c8.min.css  bootstrap-47cd73927ecadb5fe8986ef081de7199.min.css  bootstrap-5a26f0b5c19d3cc4487bc2c624bc0177.min.css  bootstrap-5e88fc55e07636ec6041f601f1530107.min.css  bootstrap-5ed25cc1a1b2518977e1838d07043a77.min.css  bootstrap-a237a227885c71206749b5e82795ab6c.min.css  bootstrap-cd11bed60a35738a5546891b5dcc8635.min.css  bootstrap-dark-240323bc59da7cbf91fabed27043e4bd.min.css  bootstrap-dark-4e46dbb53e344f39927955bceb09faba.min.css  bootstrap-dark-72b05bd8b5570b88c7191b3fd39a04e0.min.css  bootstrap-dark-9f13c830be25d1feabbfdfdcb86aa3e6.min.css  bootstrap-dark-af72793fdf03be2bc8ad8ed0314fa7fc.min.css  bootstrap-dark-afb6fe3ac31a914cf2bf156df0115c0f.min.css  bootstrap-dark-b9a7c7e34bb5c61fce4b2af3a8aca441.min.css  bootstrap-dark-bd58a27ad169f9ea7deed794bf455039.min.css  bootstrap-dark-be5447a3e94aa2a4d2de1598261a8291.min.css  bootstrap-e409d1add3ca67acc37d623b8dfd514f.min.css  bootstrap-f89b05eb018cc506dbc352c9ad4efa79.min.css
src/css/: lifemap.css
src/js/: lazy_loading.js  lifemap.js  map.js  styles.css  utils.js  widget.js
src/js/data/: api.js  deserialization.js  lazy_loading.js
src/js/elements/: error.js  popup.js  search.js  spinner.js
src/js/layers/: layer_donuts.js  layer_heatmap.js  layer_heatmap_deck.js  layer_icons.js  layer_labels.js  layer_lines.js  layer_points.js  layer_screengrid.js  layer_text.js
src/pylifemap/: __init__.py  abc.py  aggregations.py  data.py  data_computations.py  layers_parser.py  lifemap.py  lmdata.py  serialization.py  serialize.py  utils.py  widget.py
src/pylifemap/data/: aggregation.py  check_taxids.py  geo.py  lifemap_data.py  serialization.py
src/pylifemap/data/mixins/: arcs.py  donuts.py  interfaces.py  lines.py  points.py
src/pylifemap/layers/: base.py  layer_arcs.py  layer_arcs_deck.py  layer_donuts.py  layer_heatmap.py  layer_heatmap_deck.py  layer_icons.py  layer_lines.py  layer_points.py  layer_screengrid.py  layer_text.py
src/pylifemap/static/: widget.css  widget.js
src/pylifemap/static/deck/: widget.css  widget.js
src/pylifemap/static/nodeck/: widget.css  widget.js
tests/: __init__.py  test_aggregate_count.py  test_aggregate_freq.py  test_aggregate_num.py  test_aggregations.py  test_data.py  test_lazy_loading.py
