[project]
name = "pylifemap"
version = "0.1.2dev"
description = "Taxonomy data visualizations on the Lifemap tree of life"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Julien Barnier", email = "julien.barnier@cnrs.fr" },
  { name = "Damien de Vienne", email = "damien.de-vienne@cnrs.fr" }
]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = [
  "anywidget[dev]>=0.9.21",
  "ipywidgets>=8.1.7",
  "marimo==0.19.5",
  "pandas>=2.0.0",
  "platformdirs>=4.3.6",
  "polars>=1.17.0",
  "pyarrow>=22.0.0",
  "pyproj>=3.7.1",
  "requests>=2.32.3",
]

[project.urls]
Documentation = "https://github.com/Lifemap-ToL/pylifemap#readme"
Issues = "https://github.com/Lifemap-ToL/pylifemap/issues"
Source = "https://github.com/Lifemap-ToL/pylifemap"

[dependency-groups]
dev = [
  "jupyter-cache>=1.0.1",
  "jupyterlab>=4.5.2",
  "marimo>=0.19.6",
  "nbstripout>=0.7.1",
  "pytest>=9.0.2",
  "quartodoc>=0.11.1",
  "ruff>=0.14.13",
  "ty>=0.0.13",
  "watchfiles>=0.24.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.marimo.runtime]
output_max_bytes = 300_000_000

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["notebooks"]
target-version = "py310"
line-length = 88
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["pylifemap"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = [
  "src",
  "tests",
]

[tool.uv.build-backend]
source-exclude = [
  ".dockerignore",
  ".editorconfig",
  ".gitignore",
  ".python-version",
  "Dockerfile",
  "*.json"
]
